[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/door.png" type="Texture" id=1]
[ext_resource path="res://Sprites/button_trigger.png" type="Texture" id=2]
[ext_resource path="res://Door.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.11575, 15.924 )

[sub_resource type="CircleShape2D" id=4]
radius = 6.87896

[node name="Door" type="StaticBody2D"]
position = Vector2( 0, -2.048 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TriggerButton" type="Sprite" parent="."]
position = Vector2( -20, 0 )
texture = ExtResource( 2 )

[node name="TriggerArea" type="Area2D" parent="TriggerButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerButton/TriggerArea"]
shape = SubResource( 4 )

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="TriggerButton/TriggerArea" to="." method="_on_TriggerArea_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
